A working Flask app albeit only processing jpg

--- a/bean-counter/Dockerfile
+++ b/bean-counter/Dockerfile
@@ -1,12 +1,15 @@
-FROM sightmachine/simplecv
-LABEL maintainer="Srini Karlekar <skarlekar@yahoo.com>"
+FROM ubuntu:16.04
 
-RUN apt-get update && \
-    apt-get install -y python-pip && \
-    apt-get clean
+MAINTAINER Srini Karlekar <skarlekar@yahoo.com>
 
-RUN pip install  --upgrade pip
-RUN pip install  Flask
+RUN apt-get -y update
+RUN apt-get -y install ipython python-opencv python-scipy python-numpy python-setuptools python-pip python-pygame
+RUN apt-get -y install libjpeg-dev
+RUN apt-get -y install libjpeg8-dev
+RUN pip install https://github.com/sightmachine/SimpleCV/zipball/master
+RUN pip install svgwrite
+RUN pip install flask
+RUN pip install --no-cache-dir -I Pillow==2.1.0
 
 WORKDIR /app
 COPY app/app.py /app
